--- a/css/styles.css
+++ b/css/styles.css
@@ -135,6 +135,19 @@ img {
   color: var(--accent-color);
 }
 
+/* .navigation-link:hover::after,
+.navigation-link:focus::after {
+  position: absolute;
+  content: "";
+  display: block;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 4px;
+  background-color: var(--accent-color);
+  border-radius: 2px;
+} */
+
 .mail-link {
   display: flex;
   justify-content: flex-end;
@@ -182,8 +195,24 @@ img {
   fill: currentColor;
 }
 
+.navigation-item {
+  position: relative;
+}
+
 .active-link {
   color: var(--accent-color);
+}
+
+.active-link::after {
+  position: absolute;
+  content: "";
+  display: block;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 4px;
+  background-color: var(--accent-color);
+  border-radius: 2px;
 }
 /* ========== END HEADER ========== */
 
@@ -658,5 +687,49 @@ img {
 .portfolio-cards-link:focus .portfolio-overlay{
   transform: translateY(0);
 }
-
 /* ========== END PORTFOLIO CARDS ========== */
+
+/* ========== MODAL BUTTON ========== */
+.backdrop {
+  position: fixed;
+  top: 0;
+  left:0;
+  width: 100vw;
+  height: 100vh;
+
+  background-color: rgba(0, 0, 0, 0.2);
+  transition: visibility 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+    pointer-events 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 528px;
+  height: 580px;
+  background: #FFFFFF;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+
+.modal-close-button {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  background-color: transparent;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+}
+/* ========== END MODAL BUTTON ========== */
